nginx-exercice-2/solution/deployment-flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-config-api
  labels:
    app: flask-config-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-config-api
  template:
    metadata:
      labels:
        app: flask-config-api
    spec:
      serviceAccountName: dashboard-sa
      containers:
        - name: flask-config-api
          image: image-registry.openshift-image-registry.svc:5000/formation-openshift/flask-config-api:latest
          ports:
            - containerPort: 5000
