nginx-exercice-2/solution/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-unprivileged-2
  labels:
    app: nginx-unprivileged-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-unprivileged-2
  template:
    metadata:
      labels:
        app: nginx-unprivileged-2
        deployment: nginx-unprivileged-2
    spec:
      serviceAccountName: nginx-dashboard-sa

      containers:
        - name: nginx-unprivileged-2
          image: nginxinc/nginx-unprivileged@sha256:731f382bbad9a874f9f27db9c82d9e671e603e2210386a8e2b6da36cf336fa75
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi

      volumes:
        - name: template-volume
          configMap:
            name: nginx-dashboard-2
        - name: html-volume
          emptyDir: {}
