nginx-exercice-2/solution/welcome-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-app
  namespace: paris-user-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: welcome-app
  template:
    metadata:
      labels:
        app: welcome-app
    spec:
      containers:
      - name: welcome-app
        image: quay.io/neutron-it/welcome-app:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "1m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
