nginx-exercice-2/solution/service-flask.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-config-api
spec:
  selector:
    app: flask-config-api
  ports:
    - port: 5000
      targetPort: 5000
