nginx-exercice-2/solution/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-unprivileged-2
spec:
  selector:
    app: nginx-unprivileged-2
  ports:
    - port: 8080
      targetPort: 8080
