nginx-exercice-2/solution/welcome-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-multi-namespace-ingress
  namespace: paris-user-ns
spec:
  podSelector:
    matchLabels:
      app: welcome-app
  ingress:
  - from:
    - namespaceSelector: {} # Autorise le trafic provenant de TOUS les namespaces (utile pour le terminal web et les tests croisés)
  policyTypes:
  - Ingress
